[build-system]
# Specify the required build system.
requires = ["setuptools > 42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120  # Same as tool.pylint.format.max-line-length below.

[tool.pylint.format]
max-line-length = 120  # Same as tool.ruff.line-length above

[tool.pylint.reports]
# Available formats are text, parseable, colorized, json, msvs.
output-format = "colorized"

[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-module-docstring", "unnecessary-pass"]

#[tool.bork]
#project_name = "kulo"

[tool.bork.zipapp]
#enabled = true
main = "kulo.cli:zipapp_main"

[tool.bork.release]
pypi = true
github = false
github_repository = "duckinator/kulo"
strip_zipapp_version = true

[tool.bork.aliases]
# Runs *only* pylint and mypy. (Not the actual tests.)
lint = "pytest -k 'pylint or mypy' --pylint --mypy --verbose"
# Runs all tests.
test = "pytest --verbose"
# Runs fast tests.
test-fast = "pytest --verbose -m 'not slow'"
# Runs slow tests.
test-slow = "pytest --verbose -m slow"
