[build-system]
# Specify the required build system.
requires = ["setuptools > 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kulo"
dynamic = ["version"]
authors = [
    {name = "Ellen Marie Dash", email = "me@duckie.co"},
]
description = "A tool for managing (Kumo Cloud-managed) Mitsubishi Heat Pump systems (mostly?) locally"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pykumo==0.3.5",
    "toml==0.10.2",
    "requests", # Workaround for https://github.com/dlarrick/pykumo/issues/43
]

requires-python = ">= 3.8"

[project.scripts]
kulo = "kulo.cli:main"

[project.optional-dependencies]
test = [
    "pylint==3.0.2",
    "pytest==7.4.3",
    "pytest-pylint==0.21.0",
]

[tool.setuptools]
packages = ["kulo"]

[tool.setuptools.dynamic]
version = {attr = "kulo.__version__"}

[tool.ruff]
line-length = 120  # Same as tool.pylint.format.max-line-length below.

[tool.pylint.MASTER]
ignore-paths = ["^tests/.*$"]

[tool.pylint.format]
max-line-length = 120  # Same as tool.ruff.line-length above

[tool.pylint.reports]
# Available formats are text, parseable, colorized, json, msvs.
output-format = "colorized"

[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-module-docstring", "unnecessary-pass"]

[tool.bork.zipapp]
#enabled = true
main = "kulo.cli:zipapp_main"

[tool.bork.release]
pypi = true
github = false
github_repository = "duckinator/kulo"
strip_zipapp_version = true

[tool.bork.aliases]
# Runs *only* pylint. (Not the actual tests.)
lint = "pytest -k pylint --pylint --verbose"
# Runs all tests.
test = "pytest --verbose"
# Runs fast tests.
test-fast = "pytest --verbose -m 'not slow'"
# Runs slow tests.
test-slow = "pytest --verbose -m slow"
