[build-system]
# Specify the required build system.
requires = ["setuptools > 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kulo"
dynamic = ["version"]
authors = [
    {name = "Ellen Marie Dash", email = "me@duckie.co"},
]
description = "A tool for managing (Kumo Cloud-managed) Mitsubishi Heat Pump systems (mostly?) locally"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pykumo==0.3.9",
    "toml==0.10.2",
]

requires-python = ">= 3.8"

[project.scripts]
kulo = "kulo.cli:main"

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
]

[tool.setuptools]
packages = ["kulo"]

[tool.setuptools.dynamic]
version = {attr = "kulo.__version__"}

[tool.ruff]
line-length = 120

[tool.bork.release]
pypi = true
github = false
github_repository = "duckinator/kulo"
strip_zipapp_version = true

[tool.bork.aliases]
lint = "ruff check"
test = "pytest --verbose"
